--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,17 @@
 # Dependencies
-markdown:         kramdown
+markdown:         redcarpet
 highlighter:      pygments
-plugins:
-  - jekyll-gist
-  - jekyll-coffeescript
-  - jekyll-seo-tag
-  - jekyll-paginate
-
-# Enable safe mode
-safe: true
-
-# Whitelist plugins under safe mode.
-# Note that `some-other-jekyll-plugin` is not listed here. Therefore,
-# it will not be loaded under safe mode.
-whitelist:
-  - jekyll-gist
-  - jekyll-coffeescript
-  - jekyll-seo-tag
-  - jekyll-paginate
-
 
 # Permalinks
 permalink:        pretty
+relative_permalinks: true
 
 # Setup
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              www.jakubnierostek.cz
+url:              http://hyde.getpoole.com
+baseurl:          /
 
 author:
   name:           'Mark Otto'
