--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         kramdown
-highlighter:      pygments
+highlighter:      rouge
 plugins:
   - jekyll-gist
   - jekyll-coffeescript
@@ -28,7 +28,7 @@ title:            Title
 tagline:          Tag
 description:      'Sample text. A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://www.jakubnierostek.cz/
-baseurl:          /
+baseurl:          /hyde
 
 
 
