--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ title:            Title
 tagline:          Tag
 description:      'Sample text. A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://www.jakubnierostek.cz/
-baseurl:          /hyde
+baseurl:          /
 
 
 
