--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,13 @@ whitelist:
 permalink:        pretty
 
 # Setup
-title:            Title
-tagline:          Tag
-description:      'Sample text. A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            Jakub's Home Page
+tagline:          
+description:      > 
+                  Jakub Nierostek's personal home page and blog concerning all things interesting. Built with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>. Find the source code <a href="https://github.com/nierja/hyde" target="_blank">here</a>.
 url:              https://www.jakubnierostek.cz/
 baseurl:          /
-
+# 'Personal home page and blog of Jakub Nierostek. Built with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>. Find the source <a href="https://github.com/nierja/hyde" target="_blank">here</a>.'
 
 
 author:
@@ -42,4 +43,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/nierja
